# ATravelersNeeds

./: .gitignore  .pre-commit-config.yaml
client/: firebase.ts  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/components/: InfoModal.tsx  Login.tsx  Modal.tsx  SessionsModal.tsx
client/src/hooks/: useFirebaseAuth.ts
client/src/styles/: InfoModal.css  SessionsModal.css  modal.css
client/src/types/: session.ts
server/: Dockerfile  Dockerrun.aws.json  app.py  application.py  cors.json  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
server/db/: firebase_db.py  migrations.py  session.py  session_db.py
server/prompts/: system.txt
