[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Dennis Wei <dw2654@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.6.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
openai = "^1.55.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
