[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Dennis Wei <dw2654@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.6.0"
openai = "^1.55.0"
gunicorn = "^23.0.0"
boto3 = "^1.35.68"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
